--- a/wobsite/_includes/footer.html
+++ b/wobsite/_includes/footer.html
@@ -1,18 +1,15 @@
-<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
-  <div class="list-group">
-    {% for link in site.navigation %}
-      <a {% if page.url == link.url %} class="list-group-item active" {% else %} class="list-group-item" {% endif %} href="{{link.url}}" title="{{link.title}}">{{link.text}}</a></li>
-    {% endfor %}
-  </div>
-</div><!--/.sidebar-offcanvas-->
+<hr>
 
-<footer class="site-footer">
+<footer>
 
-  <div class="wrapper">
-
-      <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
-      </div>
-    </div>
+  <p>{{ site.description }}</p>
 
 </footer>
+
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
+<script src="../js/offcanvas.js"></script>
