--- a/wobsite/_includes/header.html
+++ b/wobsite/_includes/header.html
@@ -15,9 +15,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li {% if page.is_index %} class="active" {% endif %}><a href="/index.html">Home</a></li>
+            <li {% if page.is_about %} class="active" {% endif %}><a href="/about/">About</a></li>
+            <li {% if page.is_contact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
