--- a/wobsite/_layouts/default.html
+++ b/wobsite/_layouts/default.html
@@ -1,16 +1,38 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
+		{% include header.html %}
+	<div class="container">
+	<div class="row row-offcanvas row-offcanvas-right">
+		<div class="col-xs-12 col-sm-9 main-content">
 
-    {% include header.html %}
+		{{ content }}
 
-    {{ content }}
+		</div>
+		<!-- Side nav -->
+		<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
+		<!-- <div class="fixed"> -->
+			<div class="list-group">
+				{% for link in site.navigation %}
+				<a {% if page.url == link.url %} class="list-group-item active" {% else %} class="list-group-item" {% endif %} href="{{link.url}}" title="{{link.title}}">{{link.text}}</a></li>
+				{% endfor %}
+			</div>
+			{% if page.headings %}
+				<div class="list-group">
+					{% for heading in page.headings %}
+					<a class="list-group-item" href="#{{ heading }}">{{ heading }}</a>
+					{% endfor %}
+				</div>
+			{% endif %}
+			<!-- </div> -->
+		</div><!--/.sidebar-offcanvas-->
+		</div>
 
-    {% include footer.html %}
-
-  </body>
+		{% include footer.html %}
+	</div>
+</body>
 
 </html>
