--- a/wobsite/_layouts/page.html
+++ b/wobsite/_layouts/page.html
@@ -1,14 +1,14 @@
 ---
 layout: default
 ---
-<div class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
 
-  <article class="post-content">
+  <div class="jumbotron">
+    <h1>{{ page.title }}</h1>
+    <p>{{ page.description }}</p>
+  </div>
+
+  <article>
     {{ content }}
   </article>
 
-</div>
