--- a/wobsite/_includes/header.html
+++ b/wobsite/_includes/header.html
@@ -11,11 +11,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/index.html">sentimentClusters</a>
+          <a class="navbar-brand" href="/index/">sentimentClusters</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li {% if page.is_index %} class="active" {% endif %}><a href="/index.html">Home</a></li>
+            <li {% if page.is_index %} class="active" {% endif %}><a href="/index/">Home</a></li>
             <li {% if page.is_about %} class="active" {% endif %}><a href="/about/">About</a></li>
             <li {% if page.is_contact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
           </ul>
