--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li {% if page.is_index %} class="active" {% endif %}><a href="/index/">Home</a></li>
+            <li {% if page.is_index %} class="active" {% endif %}><a href="/">Home</a></li>
             <li {% if page.is_about %} class="active" {% endif %}><a href="/about/">About</a></li>
             <li {% if page.is_contact %} class="active" {% endif %}><a href="/contact/">Contact</a></li>
           </ul>
