modified site urls to play nicely with github

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,4 +14,4 @@
 <!-- Mathjax script - renders LaTeX in the webpage -->
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
-<script src="../js/offcanvas.js"></script>
+<script src="{{ site.baseurl }}/js/offcanvas.js"></script>
