--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
   <!-- Custom styles for this template -->
-  <link href="../css/offcanvas.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" type="text/css" href="../css/syntax.css">
+  <link href="{{ site.baseurl }}/css/offcanvas.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/syntax.css">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
