--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 		<!-- <div class="fixed"> -->
 			<div class="list-group">
 				{% for link in site.navigation %}
-				<a {% if page.url == link.url %} class="list-group-item active" {% else %} class="list-group-item" {% endif %} href="{{link.url}}" title="{{link.title}}">{{link.text}}</a></li>
+				<a {% if page.url == link.url %} class="list-group-item active" {% else %} class="list-group-item" {% endif %} href="{{ site.baseurl }}{{link.url}}" title="{{link.title}}">{{link.text}}</a></li>
 				{% endfor %}
 			</div>
 			{% if page.headings %}
