--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">sentimentClusters</a>
+          <a class="navbar-brand" href="{{ site.baseurl }}">sentimentClusters</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
