--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
 
   <title>Semantic Clustering of Tweets</title>
 
