--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,11 +11,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ site.baseurl }}">sentimentClusters</a>
+          <a class="navbar-brand" href="{{ site.baseurl }}/">sentimentClusters</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li {% if page.is_index %} class="active" {% endif %}><a href="{{ site.baseurl }}">Home</a></li>
+            <li {% if page.is_index %} class="active" {% endif %}><a href="{{ site.baseurl }}/">Home</a></li>
             <li {% if page.is_about %} class="active" {% endif %}><a href="{{ site.baseurl }}/about/">About</a></li>
             <li {% if page.is_contact %} class="active" {% endif %}><a href="{{ site.baseurl }}/contact/">Contact</a></li>
           </ul>
