moved main site links up to top bar after deciding that about and contact weren't needed

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,11 +2,12 @@
 layout: default
 ---
 
-
+{% if page.title %}
   <div class="jumbotron">
     <h1>{{ page.title }}</h1>
     <p>{{ page.description }}</p>
   </div>
+{% endif %}
 
   <article>
     {{ content }}
