--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li {% if page.is_index %} class="active" {% endif %}><a href="{{ site.baseurl }}/">Home</a></li>
-            <li {% if page.is_about %} class="active" {% endif %}><a href="{{ site.baseurl }}/about/">About</a></li>
-            <li {% if page.is_contact %} class="active" {% endif %}><a href="{{ site.baseurl }}/contact/">Contact</a></li>
+            {% for link in site.navigation %}
+              <li {% if page.url == link.url %} class="active" {% endif %}><a href="{{ site.baseurl }}{{link.url}}" title="{{link.title}}">{{link.text}}</a></li>
+            {% endfor %}
           </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
